--- a/Codigo/pyproject.toml
+++ b/Codigo/pyproject.toml
@@ -13,7 +13,9 @@ requires-python = ">=3.11,<3.14"
 dependencies = [
     "rich (>=14.0.0,<15.0.0)",
     "pyinstaller (>=6.13.0,<7.0.0)",
-    "docker (>=7.1.0,<8.0.0)"
+    "docker (>=7.1.0,<8.0.0)",
+    "typer (>=0.16.1,<0.17.0)",
+    "pyyaml (>=6.0.2,<7.0.0)"
 ]
 
 
