--- a/.github/workflows/test-server.yaml
+++ b/.github/workflows/test-server.yaml
@@ -21,7 +21,13 @@ jobs:
           DEBIAN_FRONTEND=noninteractive apt-get install -y --no-install-recommends \
             curl \
             maven \
-            openjdk-21-jdk-headless
+            openjdk-21-jdk-headless \
+            postgresql
+      - name: Initialize PostgreSQL
+        run: |
+          service postgresql start && \
+          su - postgres -c "psql -c \"CREATE DATABASE pmmg;\""
+          su - postgres -c "psql -c \"ALTER USER postgres WITH PASSWORD 'password';\""
       - name: Run Tests
         run: |
           cd source/backend/api-central/ && \
