--- a/.github/workflows/release-server.yaml
+++ b/.github/workflows/release-server.yaml
@@ -1,5 +1,5 @@
 name: Release Server Build
-description: 'Build JAR bundle for release'
+description: 'Build JAR bundle for release and Docker image'
 
 on:
   push:
@@ -24,11 +24,43 @@ jobs:
         run: |
           cd source/backend/api-central/ && \
           mvn clean package -Dmaven.test.skip=true && \
-          mv target/*.jar ../../../api-central-${{ github.ref_name }}.jar
+          mv target/*.jar ../api-central-${{ github.ref_name }}.jar
       - name: Create GitHub Release
         uses: softprops/action-gh-release@v2
         with:
           files: |
-            api-central-${{ github.ref_name }}.jar
+            source/backend/api-central-${{ github.ref_name }}.jar
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Upload JAR artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: api-central-${{ github.ref_name }}
+          path: source/backend/api-central-${{ github.ref_name }}.jar
+          retention-days: 1
+
+  release-docker:
+    runs-on: ubuntu-latest
+    needs: release
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v5
+      - name: Download JAR artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: api-central-${{ github.ref_name }}
+          path: ./source/backend/
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+      - name: Log in to GitHub Container Registry
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v6
+        with:
+          context: ./source/backend/
+          push: true
+          tags: ghcr.io/${{ secrets.DOCKER_USERNAME }}/pmmg:latest
