--- a/.github/workflows/release-server.yaml
+++ b/.github/workflows/release-server.yaml
@@ -6,20 +6,13 @@ on:
     tags: [ 'v*.*.*' ]
 
 jobs:
-  release:
+  release-server:
     runs-on: ubuntu-latest
     container:
-      image: debian:trixie
+      image: maven:3.9-eclipse-temurin-21
     steps:
       - name: Checkout code
         uses: actions/checkout@v5
-      - name: Install dependencies
-        run: |
-          apt-get update && \
-          DEBIAN_FRONTEND=noninteractive apt-get install -y --no-install-recommends \
-            curl \
-            maven \
-            openjdk-21-jdk-headless
       - name: Build JAR
         run: |
           cd source/backend/api-central/ && \
@@ -32,24 +25,12 @@ jobs:
             source/backend/api-central-${{ github.ref_name }}.jar
         env:
           GITHUB_TOKEN: ${{ secrets.REPO_TOKEN }}
-      - name: Upload JAR artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: api-central-${{ github.ref_name }}
-          path: source/backend/api-central-${{ github.ref_name }}.jar
-          retention-days: 1
 
-  release-docker:
+  release-server-docker:
     runs-on: ubuntu-latest
-    needs: release
     steps:
       - name: Checkout code
         uses: actions/checkout@v5
-      - name: Download JAR artifact
-        uses: actions/download-artifact@v4
-        with:
-          name: api-central-${{ github.ref_name }}
-          path: ./source/backend/
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
       - name: Log in to GitHub Container Registry
