use python as base images and bump debian to trixie

--- a/Codigo/Dockerfile
+++ b/Codigo/Dockerfile
@@ -18,28 +18,7 @@
 # The below variable skips squashing the image layers
 # Devcontainers do not support squashing
 ARG DEVCONTAINER
-
-################################## POETRY BUILDER
-FROM debian:trixie AS poetry-builder
-ENV PIPX_HOME=/opt/pipx
-ENV PIPX_BIN_DIR=/opt/pipx/bin
-ENV POETRY_VIRTUALENVS_PATH=/opt/poetry
-ENV PYTHONPATH="${POETRY_VIRTUALENVS_PATH}/lib/site-packages"
-
-RUN apt-get update && \
-    DEBIAN_FRONTEND=noninteractive apt-get install --no-install-recommends -y -qq pipx
-
-RUN pipx install poetry
-
-# Install python dependencies via poetry
-COPY pyproject.toml poetry.lock /tmp/
-RUN cd /tmp && /opt/pipx/bin/poetry install --no-interaction --no-ansi --no-root && \
-    ln -s "${POETRY_VIRTUALENVS_PATH}"/*/bin "${POETRY_VIRTUALENVS_PATH}/bin" && \
-    ln -s "${POETRY_VIRTUALENVS_PATH}"/*/lib/* "${POETRY_VIRTUALENVS_PATH}/lib"
-
-# Clear cache
-RUN rm -rf /opt/pipx/.cache /opt/pipx/logs && \
-    find /opt -type d -name '__pycache__' -exec rm -r {} +
+ARG PYTHON_VERSION=3.13
 
 ################################## PLANTUML BUILDER
 FROM alpine:3.22 AS plantuml-builder
@@ -55,7 +34,7 @@ RUN chmod 0644 /opt/plantuml.jar && \
     gpg --verify /opt/plantuml.jar.asc /opt/plantuml.jar
 
 ################################## RUNTIME IMAGE
-FROM debian:trixie AS base
+FROM python:${PYTHON_VERSION} AS base
 
 ############### ENV VARS
 # APT
@@ -68,6 +47,9 @@ ENV LC_ALL=en_US.UTF-8
 ARG USER=hookci
 ARG UID=1000
 ARG GID=1000
+
+ENV PYTHONDONTWRITEBYTECODE=1
+ENV PYTHONUNBUFFERED=1
 
 ############### APT DEPENDENCIES
 
@@ -104,9 +86,7 @@ RUN apt-get install --no-install-recommends -y -qq \
     binutils \
     gcc \
     libc-dev \
-    make \
-    pipx \
-    python3-dev
+    make
 
 # Install project dependencies
 RUN apt-get install --no-install-recommends -y -qq \
@@ -127,12 +107,20 @@ RUN wget -qO- https://download.docker.com/linux/debian/gpg | gpg --dearmor | tee
     echo "deb [arch=amd64 signed-by=/etc/apt/keyrings/docker.asc] https://download.docker.com/linux/debian trixie stable" \
     | tee /etc/apt/sources.list.d/docker.list >/dev/null && \
     apt-get update && \
-    DEBIAN_FRONTEND=noninteractive apt-get install -y \
+    apt-get install --no-install-recommends -y \
     containerd.io \
     docker-buildx-plugin \
     docker-ce \
     docker-ce-cli \
     docker-compose-plugin
+
+############### INSTALL POETRY
+RUN python -m pip install --upgrade pip poetry
+
+# Install python dependencies via poetry
+COPY pyproject.toml poetry.lock /tmp/
+RUN cd /tmp && poetry config virtualenvs.create false && \
+    poetry install --no-interaction --no-ansi --no-root
 
 ############### USER CREATION
 # Create user based on current user
@@ -140,49 +128,34 @@ RUN groupadd --gid "${GID}" "${USER}" && \
     useradd --uid "${UID}" --gid "${GID}" --home-dir "/home/${USER}" --shell /bin/bash --create-home "${USER}" && \
     usermod -aG docker "${USER}"
 
-# Configure doas and "alias" it to sudo
+# Configure doas and alias it to sudo
 RUN printf "permit nopass nolog keepenv %s as root\n" "${USER}" >/etc/doas.conf && \
     chmod 400 /etc/doas.conf && \
-    printf "%s\nset -e\n%s\n" "#!/bin/sh" "doas \$@">/usr/local/bin/sudo && \
-    chmod a+rx /usr/local/bin/sudo
-
-# Configure doas and "alias" it to sudo
-RUN printf "permit nopass nolog keepenv %s as root\n" "${USER}" >/etc/doas.conf && \
-    chmod 400 /etc/doas.conf && \
-    printf "%s\nset -e\n%s\n" "#!/bin/sh" "doas \$@">/usr/local/bin/sudo && \
+    printf "%s\nset -e\n%s\n" "#!/bin/sh" "doas \$@" >/usr/local/bin/sudo && \
     chmod a+rx /usr/local/bin/sudo
 
 ############### PLANTUML
 RUN printf "%s\nset -e\n%s\n" "#!/bin/sh" "java -jar /opt/plantuml.jar \$@" >/usr/local/bin/plantuml && \
     chmod a+rx /usr/local/bin/plantuml
-COPY --from=plantuml-builder --chown="${UID}:${GID}" /opt/plantuml.jar /opt/plantuml.jar
-
-############### PYTHON ENVIRONMENT
-COPY --from=poetry-builder --chown="${UID}:${GID}" /opt/poetry /opt/poetry
-COPY --from=poetry-builder --chown="${UID}:${GID}" /opt/pipx /opt/pipx
+COPY --from=plantuml-builder /opt/plantuml.jar /opt/plantuml.jar
 
 ############### CACHE CLEANING
 # Clean apt cache
 RUN apt-get clean && rm -rf /var/lib/apt/lists/* 
 # Clean generic cache
 RUN rm -rf /var/cache/* /var/log/* /tmp/*
+
 ################################## LAYER SQUASHING
 FROM scratch AS squash
 COPY --from=base / /
 
 FROM ${DEVCONTAINER:-squash}
 
-############### ENV VARS
+############### FINAL ENV
 ENV LANG=en_US.UTF-8
 ENV LC_ALL=en_US.UTF-8
-
 ENV PYTHONDONTWRITEBYTECODE=1
 ENV PYTHONUNBUFFERED=1
-
-ENV POETRY_VIRTUALENVS_PATH=/opt/poetry
-
-ENV PYTHONPATH="${POETRY_VIRTUALENVS_PATH}/lib/site-packages"
-ENV PATH="${POETRY_VIRTUALENVS_PATH}/bin:/opt/pipx/bin:${PATH}"
 
 # Change into runtime user
 ARG USER=hookci
