add python libs integration to devcontainer

--- a/.devcontainer.json
+++ b/.devcontainer.json
@@ -42,7 +42,10 @@
                 "eamodio.gitlens",
                 "foxundermoon.shell-format",
                 "docker.docker"
-            ]
+            ],
+            "settings": {
+                "python.defaultInterpreterPath": "/usr/local/bin/python3"
+            }
         }
     }
 }
