--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,6 @@
     "editor.formatOnSave": true,
     "python.analysis.extraPaths": [
         "./Codigo/src"
-    ]
+    ],
+    "terminal.integrated.cwd": "Codigo"
 }
