--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,5 +6,10 @@
     "python.analysis.extraPaths": [
         "./Codigo/src"
     ],
-    "terminal.integrated.cwd": "Codigo"
+    "terminal.integrated.cwd": "Codigo",
+    "[makefile]": {
+        "editor.insertSpaces": false,
+        "editor.tabSize": 4,
+        "editor.detectIndentation": false
+    }
 }
