--- a/package.json
+++ b/package.json
@@ -2,12 +2,17 @@
   "name": "wasudoku",
   "private": true,
   "version": "0.0.0",
+  "license": "AGPL-3.0-or-later",
   "type": "module",
   "scripts": {
+    "predev": "npm run wasm:build:dev",
     "dev": "vite",
+    "prebuild": "npm run wasm:build:prod",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "wasm:build:dev": "wasm-pack build src/wasudoku-wasm --target web --dev",
+    "wasm:build:prod": "wasm-pack build src/wasudoku-wasm --target web --release -- --no-default-features"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.14",
