--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -32,6 +32,9 @@
     "paths": {
       "@/*": [
         "./src/*"
+      ],
+      "wasudoku-wasm": [
+        "./src/wasudoku-wasm/pkg"
       ]
     }
   },
