--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,9 @@
     "paths": {
       "@/*": [
         "./src/*"
+      ],
+      "wasudoku-wasm": [
+        "./src/wasudoku-wasm/pkg"
       ]
     }
   }
