--- a/.devcontainer.json
+++ b/.devcontainer.json
@@ -34,7 +34,8 @@
         "donjayamanne.githistory",
         "eamodio.gitlens",
         "foxundermoon.shell-format",
-        "rust-lang.rust-analyzer"
+        "rust-lang.rust-analyzer",
+        "vadimcn.vscode-lldb"
       ]
     }
   }
