--- a/.devcontainer.json
+++ b/.devcontainer.json
@@ -24,6 +24,7 @@
     "TMUX": "${env:TMUX}"
   },
   "userEnvProbe": "interactiveShell",
+  "postCreateCommand": "./scripts/wasm-deps.sh",
   "customizations": {
     "vscode": {
       "extensions": [
