--- a/src/wasudoku-wasm/Cargo.toml
+++ b/src/wasudoku-wasm/Cargo.toml
@@ -10,6 +10,8 @@ crate-type = ["cdylib", "rlib"]
 
 [features]
 default = ["console_error_panic_hook"]
+# Feature to induce a panic for testing purposes.
+test-panic = []
 
 [dependencies]
 wasm-bindgen = "0.2.104"
