--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "test:rust": "cd src/wasudoku-wasm && cargo llvm-cov --features test-panic --cobertura --output-path ../../coverage-wasm.xml; cd - >/dev/null",
-    "test:frontend": "vitest run --coverage; mv coverage/cobertura-coverage.xml coverage-ui.xml && rmdir coverage",
-    "test": "rm -f coverage-*.xml; npm run test:rust && npm run test:frontend",
+    "test:frontend": "vitest run --coverage; mv coverage/lcov.info coverage-ui.lcov; rm -rf coverage",
+    "test": "rm -f coverage-*; npm run test:rust && npm run test:frontend",
     "wasm:build:dev": "wasm-pack build src/wasudoku-wasm --target web --dev",
     "wasm:build:prod": "wasm-pack build src/wasudoku-wasm --target web --release -- --no-default-features"
   },
