--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -19,7 +19,10 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
-      - name: Generate unique image name
+      - name: Update version numbers from tag
+        run: |
+          scripts/version.sh ${{ github.ref_name }}
+      - name: Generate an unique image name
         id: image-name
         run: echo "IMAGE_NAME=wasudoku-ci:${GITHUB_SHA::8}" >> $GITHUB_ENV
       - name: Build Docker image
