--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -41,10 +41,6 @@ jobs:
             npm run build
       - name: Package artifact for release
         run: tar -czvf WASudoku.tar.gz -C dist .
-      - name: Create GitHub Release
-        uses: softprops/action-gh-release@v2
-        with:
-          files: WASudoku.tar.gz
       - name: Upload production artifact
         uses: actions/upload-pages-artifact@v4
         with:
@@ -52,3 +48,24 @@ jobs:
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
+      - name: Restore Keystore from Secrets
+        run: echo "${{ secrets.ANDROID_KEYSTORE_B64 }}" | base64 --decode >android.keystore
+      - name: Add license agreement
+        run: |
+          mkdir -p licenses
+          echo "8933bad161af4178b1185d1a37fbf41ea5269c55" >> licenses/android-sdk-license
+          echo "d56f5187479451eabf01fb78af6dfcb131a6481e" >> licenses/android-sdk-license
+          echo "24333f8a63b6825ea9c5514f83c2829b004d1fee" >> licenses/android-sdk-license
+          echo "84831b9409646a918e30573bab4c9c91346d8abd" >> licenses/android-sdk-preview-license
+      - name: Build APK
+        run: |
+          export KEYSTORE_PASSWORD="${{ secrets.KEYSTORE_PASSWORD }}"
+          scripts/build-apk.sh ${{ github.ref_name }}
+      - name: Rename APK file
+        run: mv app-release-signed.apk WASudoku.apk
+      - name: Create GitHub Release
+        uses: softprops/action-gh-release@v2
+        with:
+          files: |
+            WASudoku.tar.gz
+            WASudoku.apk
