--- a/src/wasudoku-wasm/Cargo.toml
+++ b/src/wasudoku-wasm/Cargo.toml
@@ -14,7 +14,9 @@ default = ["console_error_panic_hook"]
 test-panic = []
 
 [dependencies]
-wasm-bindgen = "0.2.104"
+wasm-bindgen = { version = "0.2.104", features = ["serde-serialize"] }
+serde = { version = "1.0", features = ["derive"] }
+serde-wasm-bindgen = "0.6"
 
 # The `console_error_panic_hook` crate provides better debugging of panics by
 # logging them with `console.error`. This is great for development, but requires
