--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "wasm:build:prod": "wasm-pack build src/wasudoku-wasm --target web --release -- --no-default-features"
   },
   "dependencies": {
+    "@radix-ui/react-accordion": "^1.2.12",
+    "@radix-ui/react-scroll-area": "^1.2.10",
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-toggle": "^1.1.10",
