--- a/src/wasudoku-wasm/Cargo.toml
+++ b/src/wasudoku-wasm/Cargo.toml
@@ -17,6 +17,7 @@ test-panic = []
 wasm-bindgen = { version = "0.2.104", features = ["serde-serialize"] }
 serde = { version = "1.0", features = ["derive"] }
 serde-wasm-bindgen = "0.6"
+lazy_static = "1.4.0"
 
 # The `console_error_panic_hook` crate provides better debugging of panics by
 # logging them with `console.error`. This is great for development, but requires
