--- a/public/manifest.json
+++ b/public/manifest.json
@@ -8,12 +8,12 @@
   "theme_color": "#141414",
   "icons": [
     {
-      "src": "/icon-192.png",
+      "src": "/WASudoku/icon-192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "/icon-512.png",
+      "src": "/WASudoku/icon-512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
