--- a/src/wasudoku-wasm/Cargo.toml
+++ b/src/wasudoku-wasm/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "wasudoku-wasm"
 version = "0.0.0"
-authors = ["Henrique Almeida <henrique.almeida@hexagon.com>"]
+authors = ["Henrique Almeida <me@h3nc4.com>"]
 edition = "2024"
 license = "AGPL-3.0-or-later"
 
@@ -17,7 +17,9 @@ test-panic = []
 wasm-bindgen = { version = "0.2.104", features = ["serde-serialize"] }
 serde = { version = "1.0", features = ["derive"] }
 serde-wasm-bindgen = "0.6"
-lazy_static = "1.4.0"
+lazy_static = "1.5"
+rand = { version = "0.9", features = ["std_rng"] }
+getrandom = { version = "0.3", features = ["wasm_js"] }
 
 # The `console_error_panic_hook` crate provides better debugging of panics by
 # logging them with `console.error`. This is great for development, but requires
