write unit tests and refactor large functions

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -26,9 +26,7 @@ sonar.sources=src
 sonar.tests=src
 
 # Define which files are considered test files.
-# This includes TypeScript test files. Rust unit tests are co-located, and
-# coverage is determined by the report, not file patterns.
-sonar.test.inclusions=**/*.test.ts,**/*.test.tsx
+sonar.test.inclusions=**/*.test.ts,**/*.test.tsx,src/test/**,src/wasudoku-wasm/tests/**
 
 # Exclude wasm-bindgen browser tests from the standard test metrics.
 sonar.test.exclusions=src/wasudoku-wasm/tests/web.rs
