add prettier as formatter and format all files

--- a/.devcontainer.json
+++ b/.devcontainer.json
@@ -36,7 +36,8 @@
         "eamodio.gitlens",
         "foxundermoon.shell-format",
         "rust-lang.rust-analyzer",
-        "vadimcn.vscode-lldb"
+        "vadimcn.vscode-lldb",
+        "esbenp.prettier-vscode"
       ]
     }
   }
