--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,7 +5,21 @@
   "editor.formatOnSave": true,
   "files.insertFinalNewline": true,
   "files.trimFinalNewlines": true,
-  "rust-analyzer.linkedProjects": [
-    "./src/wasudoku-wasm/Cargo.toml"
-  ]
+  "rust-analyzer.linkedProjects": ["./src/wasudoku-wasm/Cargo.toml"],
+  "prettier.enable": true,
+  "[typescript]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  },
+  "[typescriptreact]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  },
+  "[css]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  },
+  "[html]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  },
+  "[jsonc]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  }
 }
