--- a/package.json
+++ b/package.json
@@ -11,10 +11,14 @@
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "lint:rust": "cd src/wasudoku-wasm && cargo clippy -- -D warnings",
+    "typecheck": "tsc -b",
+    "format:check": "prettier --check .",
     "preview": "vite preview",
     "test:rust": "cd src/wasudoku-wasm && cargo llvm-cov --features test-panic --cobertura --output-path ../../coverage-wasm.xml; cd - >/dev/null",
-    "test:frontend": "vitest run --coverage; mv coverage/lcov.info coverage-ui.lcov; rm -rf coverage",
-    "test": "rm -f coverage-*; npm run test:rust && npm run test:frontend",
+    "test:ui": "vitest run --coverage; mv coverage/lcov.info coverage-ui.lcov; rm -rf coverage",
+    "test": "rm -f coverage-*; npm run test:rust && npm run test:ui",
+    "audit": "npm audit --audit-level=high",
+    "audit:rust": "cd src/wasudoku-wasm && cargo audit",
     "wasm:build:dev": "wasm-pack build src/wasudoku-wasm --target web --dev",
     "wasm:build:prod": "wasm-pack build src/wasudoku-wasm --target web --release -- --no-default-features"
   },
@@ -53,6 +57,8 @@
     "eslint-plugin-react-refresh": "^0.4.22",
     "globals": "^16.4.0",
     "jsdom": "^27.0.0",
+    "prettier": "^3.6.2",
+    "prettier-plugin-tailwindcss": "^0.7.1",
     "tw-animate-css": "^1.4.0",
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.45.0",
