--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -21,7 +21,7 @@ sonar.projectVersion=0.0.0
 sonar.sourceEncoding=UTF-8
 
 # Path to sources and tests
-# The 'src' directory contains both the frontend and wasm sub-project.
+# The 'src' directory contains both the UI and wasm sub-project.
 sonar.sources=src
 sonar.tests=src
 
