--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "prebuild": "npm run wasm:build:prod",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
+    "lint:md": "markdownlint-cli2 README.md",
+    "lint:sh": "shellcheck -o all scripts/*.sh",
     "lint:rust": "cd src/wasudoku-wasm && cargo clippy -- -D warnings",
     "typecheck": "tsc -b",
     "format:check": "prettier --check .",
@@ -57,6 +59,7 @@
     "eslint-plugin-react-refresh": "^0.4.22",
     "globals": "^16.4.0",
     "jsdom": "^27.0.0",
+    "markdownlint-cli2": "^0.18.1",
     "prettier": "^3.6.2",
     "prettier-plugin-tailwindcss": "^0.7.1",
     "tw-animate-css": "^1.4.0",
