--- a/.devcontainer.json
+++ b/.devcontainer.json
@@ -1,6 +1,6 @@
 {
   "name": "WASudoku",
-  "image": "h3nc4/wasudoku:latest",
+  "image": "h3nc4/wasudoku-dev:latest",
   "runArgs": [
     "-v",
     "/etc/localtime:/etc/localtime:ro",
